; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/gatt/extr_bta_gattc_main.c_gattc_evt_code.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/gatt/extr_bta_gattc_main.c_gattc_evt_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"BTA_GATTC_API_OPEN_EVT\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"BTA_GATTC_INT_OPEN_FAIL_EVT\00", align 1
@.str.2 = private unnamed_addr constant [30 x i8] c"BTA_GATTC_API_CANCEL_OPEN_EVT\00", align 1
@.str.3 = private unnamed_addr constant [33 x i8] c"BTA_GATTC_INT_CANCEL_OPEN_OK_EVT\00", align 1
@.str.4 = private unnamed_addr constant [23 x i8] c"BTA_GATTC_API_READ_EVT\00", align 1
@.str.5 = private unnamed_addr constant [24 x i8] c"BTA_GATTC_API_WRITE_EVT\00", align 1
@.str.6 = private unnamed_addr constant [23 x i8] c"BTA_GATTC_API_EXEC_EVT\00", align 1
@.str.7 = private unnamed_addr constant [24 x i8] c"BTA_GATTC_API_CLOSE_EVT\00", align 1
@.str.8 = private unnamed_addr constant [25 x i8] c"BTA_GATTC_API_SEARCH_EVT\00", align 1
@.str.9 = private unnamed_addr constant [26 x i8] c"BTA_GATTC_API_CONFIRM_EVT\00", align 1
@.str.10 = private unnamed_addr constant [29 x i8] c"BTA_GATTC_API_READ_MULTI_EVT\00", align 1
@.str.11 = private unnamed_addr constant [23 x i8] c"BTA_GATTC_INT_CONN_EVT\00", align 1
@.str.12 = private unnamed_addr constant [27 x i8] c"BTA_GATTC_INT_DISCOVER_EVT\00", align 1
@.str.13 = private unnamed_addr constant [28 x i8] c"BTA_GATTC_DISCOVER_CMPL_EVT\00", align 1
@.str.14 = private unnamed_addr constant [22 x i8] c"BTA_GATTC_OP_CMPL_EVT\00", align 1
@.str.15 = private unnamed_addr constant [26 x i8] c"BTA_GATTC_INT_DISCONN_EVT\00", align 1
@.str.16 = private unnamed_addr constant [27 x i8] c"BTA_GATTC_INT_START_IF_EVT\00", align 1
@.str.17 = private unnamed_addr constant [22 x i8] c"BTA_GATTC_API_REG_EVT\00", align 1
@.str.18 = private unnamed_addr constant [24 x i8] c"BTA_GATTC_API_DEREG_EVT\00", align 1
@.str.19 = private unnamed_addr constant [26 x i8] c"BTA_GATTC_API_REFRESH_EVT\00", align 1
@.str.20 = private unnamed_addr constant [30 x i8] c"BTA_GATTC_API_CACHE_CLEAN_EVT\00", align 1
@.str.21 = private unnamed_addr constant [25 x i8] c"BTA_GATTC_API_LISTEN_EVT\00", align 1
@.str.22 = private unnamed_addr constant [26 x i8] c"BTA_GATTC_API_DISABLE_EVT\00", align 1
@.str.23 = private unnamed_addr constant [26 x i8] c"BTA_GATTC_API_CFG_MTU_EVT\00", align 1
@.str.24 = private unnamed_addr constant [25 x i8] c"unknown GATTC event code\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @gattc_evt_code to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @gattc_evt_code(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %29 [
    i32 142, label %5
    i32 130, label %6
    i32 150, label %7
    i32 134, label %8
    i32 141, label %9
    i32 136, label %10
    i32 144, label %11
    i32 148, label %12
    i32 137, label %13
    i32 147, label %14
    i32 140, label %15
    i32 133, label %16
    i32 131, label %17
    i32 135, label %18
    i32 128, label %19
    i32 132, label %20
    i32 129, label %21
    i32 138, label %22
    i32 146, label %23
    i32 139, label %24
    i32 151, label %25
    i32 143, label %26
    i32 145, label %27
    i32 149, label %28
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %30

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %30

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %30

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %30

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %30

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %30

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %30

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %30

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %30

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %30

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %30

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %30

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %30

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %30

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %30

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %30

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %30

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %30

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %30

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %30

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.20, i64 0, i64 0), i8** %2, align 8
  br label %30

26:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.21, i64 0, i64 0), i8** %2, align 8
  br label %30

27:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.22, i64 0, i64 0), i8** %2, align 8
  br label %30

28:                                               ; preds = %1
  store i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.23, i64 0, i64 0), i8** %2, align 8
  br label %30

29:                                               ; preds = %1
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.24, i64 0, i64 0), i8** %2, align 8
  br label %30

30:                                               ; preds = %29, %28, %27, %26, %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %31 = load i8*, i8** %2, align 8
  ret i8* %31
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
